---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/set_constraints.sql
---
SOURCE_FILE
  COMMENT "-- docs"
  WHITESPACE "\n"
  SET_CONSTRAINTS
    SET_KW "set"
    WHITESPACE " "
    CONSTRAINTS_KW "constraints"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    DEFERRED_KW "deferred"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_CONSTRAINTS
    SET_KW "set"
    WHITESPACE " "
    CONSTRAINTS_KW "constraints"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    IMMEDIATE_KW "immediate"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_CONSTRAINTS
    SET_KW "set"
    WHITESPACE " "
    CONSTRAINTS_KW "constraints"
    WHITESPACE " "
    CONSTRAINT_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "foo"
    COMMA ","
    WHITESPACE " "
    CONSTRAINT_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "bar"
    COMMA ","
    WHITESPACE " "
    CONSTRAINT_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "a"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    WHITESPACE " "
    IMMEDIATE_KW "immediate"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_CONSTRAINTS
    SET_KW "set"
    WHITESPACE " "
    CONSTRAINTS_KW "constraints"
    WHITESPACE " "
    CONSTRAINT_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "bar"
    WHITESPACE " "
    IMMEDIATE_KW "immediate"
    SEMICOLON ";"
  WHITESPACE "\n\n"
